added rest of the pages
Finished and added all of the pages linked

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="UTF-8">
-        <title>Odin-Recipes</title>
+        <title>Aaron & Gabs Recipes</title>
     </head>
 
     <body>
@@ -11,8 +11,9 @@
         <ul>
             <li><a href="./recipes/gabs-pasta.html" target="_blank" rel="noopener noreferrer">Gabs' Pasta</a></li>
             <li><a href="./recipes/air-fried-spicychicken.html" target="_blank" rel="noopener noreferrer">Air Fried Chicken</a></li>
+            <li><a href="./recipes/ram-don.html" target="_blank" rel="noopener noreferrer">Ram-Don</a></li>
         </ul>
 
     </body>
-    <!-- Added the recipes and chicken page -->
+   
 </html>
