added a page and modified recipe pages
Made the headers bold and created the ram don page

--- a/recipes/air-fried-spicychicken.html
+++ b/recipes/air-fried-spicychicken.html
@@ -3,9 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Air Fried Chicken Recipe</title>
 </head>
 <body>
-    
+    <h1>Air Fried Chicken</h1>
+    <img src="./airfriedchicken.jpeg" alt="Air Fried Chicken">
+    <h4>Chicken</h4>
+        <p>I really like making this chicken because it's easy from the air fryer</p>
+        <p>and juicy still</p>
+    <h4><strong>Ingredients</strong></h4>
+        <ul>
+          <li>Chicken breast</li>
+          <li>Mike's hot honey</li>
+          <li>Salt</li>
+          <li>Pepper</li>
+          <li>Paprika</li>
+          <li>Meat tenderizer</li>
+        </ul>
+    <h4><strong>Steps</strong></h4>
+        <ol>
+            <li>Get chicken to room temp</li>
+            <li>Tenderize chicken</li>
+            <li>Season with salt, pepper, and paprika</li>
+            <li>Put hot honey onto chicken</li>
+            <li>Make sure chicken is well seasoned and marinated</li>
+            <li>Put chicken into air fryer for 13 mins at 450f</li>
+            <li>Flip halfway</li>
+            <li>Take out and let cool unitl you see fit</li>
+            <li>Enjoy!</li>
+        </ol>
 </body>
 </html>
