--- a/recipes/gabs-pasta.html
+++ b/recipes/gabs-pasta.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gabs' Pasta</title>
+    <title>Gabs' Pasta Recipe</title>
 </head>
 <body>
     <h1>Gabs' Pasta</h1>
