closed an li in the steps list

--- a/recipes/ram-don.html
+++ b/recipes/ram-don.html
@@ -24,7 +24,7 @@
     <h4><strong>Steps</strong></h4>
         <ol>
             <li>Get steak to room temp</li>
-            <li>Boil water/li>
+            <li>Boil water</li>
             <li>Cut steak into cubes</li>
             <li>Marinate steak cubes with the soy sauce, mirin, and peanut oil</li>
             <li>Cook ramen with spice packets</li>
