Added css basics to page
Added css and classes to recipes pages

--- a/recipes/air-fried-spicychicken.html
+++ b/recipes/air-fried-spicychicken.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Air Fried Chicken Recipe</title>
+    <link rel="stylesheet" href="recipesstyles.css">
 </head>
 <body>
-    <h1>Air Fried Chicken</h1>
+    <h1 class="heading">Air Fried Chicken</h1>
     <img src="./airfriedchicken.jpeg" alt="Air Fried Chicken">
-    <h4>Chicken</h4>
+    <h4 class="subheading">Chicken</h4>
         <p>I really like making this chicken because it's easy from the air fryer</p>
         <p>and juicy still</p>
-    <h4><strong>Ingredients</strong></h4>
-        <ul>
+    <h4 class="subheading" id="ingredients"><strong>Ingredients</strong></h4>
+        <ul class="bullets">
           <li>Chicken breast</li>
           <li>Mike's hot honey</li>
           <li>Salt</li>
@@ -20,8 +21,8 @@
           <li>Paprika</li>
           <li>Meat tenderizer</li>
         </ul>
-    <h4><strong>Steps</strong></h4>
-        <ol>
+    <h4 class="subheading" id="steps"><strong>Steps</strong></h4>
+        <ol class="bullets">
             <li>Get chicken to room temp</li>
             <li>Tenderize chicken</li>
             <li>Season with salt, pepper, and paprika</li>
