--- a/recipes/ram-don.html
+++ b/recipes/ram-don.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ram-Don Recipe</title>
+    <link rel="stylesheet" href="recipesstyles.css">
 </head>
 <body>
-    <h1>Ram-Don</h1>
+    <h1 class="heading">Ram-Don</h1>
     <img src="./ram-don.jpeg" alt="Ram-Don">
-    <h4>Nice bowl of ram-don</h4>
+    <h4 class="subheading">Nice bowl of ram-don</h4>
         <p>Started making this because of Parasite</p>
         <p>super yummy and makes us feel cozy</p>
-    <h4><strong>Ingredients</strong></h4>
-        <ul>
+    <h4 class="subheading" id="ingredients"><strong>Ingredients</strong></h4>
+        <ul class="bullets">
           <li>Neoguri ramen</li>
           <li>Sirloin or steak of your choosing</li>
           <li>Salt</li>
@@ -21,8 +22,8 @@
           <li>Mirin</li>
           <li>Peanut oil</li>
         </ul>
-    <h4><strong>Steps</strong></h4>
-        <ol>
+    <h4 class="subheading" id="ingredients"><strong>Steps</strong></h4>
+        <ol class="bullets">
             <li>Get steak to room temp</li>
             <li>Boil water</li>
             <li>Cut steak into cubes</li>
