--- a/recipes/gabs-pasta.html
+++ b/recipes/gabs-pasta.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gabs' Pasta Recipe</title>
+    <link rel="stylesheet" href="recipesstyles.css">
 </head>
 <body>
-    <h1>Gabs' Pasta</h1>
-    <img src="./gabs-pasta.jpeg" alt="Gabs Pasta">
-    <h4>Gabs likes to make this pasta all the time since Covid</h4>
+    <h1 class="heading">Gabs' Pasta</h1>
+    <img src="./pasta.jpg" alt="Gabs Pasta">
+    <h4 class="subheading">Gabs likes to make this pasta all the time since Covid</h4>
         <p>This is originally Gigi Hadid's pasta </p>
         <p> but since Gabs started making it, it is now Gabs' pasta</p>
-    <h4><strong>Ingredients</strong></h4>
-     <ul>
+    <h4 class="subheading" id="ingredients"><strong>Ingredients</strong></h4>
+     <ul class="bullets">
         <li>Fresh Pasta</li>
         <li>Tomato Paste</li>
         <li>Heavy Cream</li>
@@ -23,8 +24,8 @@
         <li>Pepper</li>
         <li>Red Chilli Flakes</li>
     </ul>
-    <h4><stong>Steps</stong></h4>
-    <ol>
+    <h4 class="subheading" id="steps"><stong>Steps</stong></h4>
+    <ol class="bullets">
         <li>Wash and prepare onions</li>
         <li>Boil water and add a pinch of salt to the water</li>
         <li>Cut onions and put garlic into the grinder</li>
@@ -33,7 +34,7 @@
         <li>Add tomato paste to sauce pan and cook until brown</li>
         <li>Add heavy cream to sauce pan</li>
         <li>Bring to a simmer</li>
-        <li>Season sauce with salt,pepper, and chilli flakes</li>
+        <li>Season sauce with salt, pepper, and chilli flakes</li>
         <li>Drain pasta, save some pasta water for sauce</li>
         <li>Mix in pasta with sauce</li>
         <li>Enjoy!</li>
