--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Aaron & Gabs Recipes</title>
+        <link rel="stylesheet" href="indexstyle.css">
     </head>
 
     <body>
-        <h1>Aaron & Gabs Recipes</h1>
+        <h1 class="heading" id="mainheading">Aaron & Gabs Recipes</h1>
         <ul>
             <li><a href="./recipes/gabs-pasta.html" target="_blank" rel="noopener noreferrer">Gabs' Pasta</a></li>
             <li><a href="./recipes/air-fried-spicychicken.html" target="_blank" rel="noopener noreferrer">Air Fried Chicken</a></li>
