--- a/recipes/gabs-pasta.html
+++ b/recipes/gabs-pasta.html
@@ -9,10 +9,10 @@
 <body>
     <h1 class="heading">Gabs' Pasta</h1>
     <img src="./pasta.jpg" alt="Gabs Pasta">
-    <h4 class="subheading">Gabs likes to make this pasta all the time since Covid</h4>
+    <h4 class="topheading">Gabs likes to make this pasta all the time since Covid</h4>
         <p>This is originally Gigi Hadid's pasta </p>
         <p> but since Gabs started making it, it is now Gabs' pasta</p>
-    <h4 class="subheading" id="ingredients"><strong>Ingredients</strong></h4>
+    <h4 class="subheading" id="ingredients">Ingredients</h4>
      <ul class="bullets">
         <li>Fresh Pasta</li>
         <li>Tomato Paste</li>
@@ -24,7 +24,7 @@
         <li>Pepper</li>
         <li>Red Chilli Flakes</li>
     </ul>
-    <h4 class="subheading" id="steps"><stong>Steps</stong></h4>
+    <h4 class="subheading" id="steps">Steps</h4>
     <ol class="bullets">
         <li>Wash and prepare onions</li>
         <li>Boil water and add a pinch of salt to the water</li>
