--- a/recipes/ram-don.html
+++ b/recipes/ram-don.html
@@ -9,7 +9,7 @@
 <body>
     <h1 class="heading">Ram-Don</h1>
     <img src="./ram-don.jpeg" alt="Ram-Don">
-    <h4 class="subheading">Nice bowl of ram-don</h4>
+    <h4 class="topheading">Nice bowl of ram-don</h4>
         <p>Started making this because of Parasite</p>
         <p>super yummy and makes us feel cozy</p>
     <h4 class="subheading" id="ingredients"><strong>Ingredients</strong></h4>
