took off on chicken and ram-don page
took strong element off chicken and ram-don

--- a/recipes/air-fried-spicychicken.html
+++ b/recipes/air-fried-spicychicken.html
@@ -12,7 +12,7 @@
     <h4 class="topheading">Chicken</h4>
         <p>I really like making this chicken because it's easy from the air fryer</p>
         <p>and juicy still</p>
-    <h4 class="subheading" id="ingredients"><strong>Ingredients</strong></h4>
+    <h4 class="subheading" id="ingredients">Ingredients</h4>
         <ul class="bullets">
           <li>Chicken breast</li>
           <li>Mike's hot honey</li>
@@ -21,7 +21,7 @@
           <li>Paprika</li>
           <li>Meat tenderizer</li>
         </ul>
-    <h4 class="subheading" id="steps"><strong>Steps</strong></h4>
+    <h4 class="subheading" id="steps">Steps</h4>
         <ol class="bullets">
             <li>Get chicken to room temp</li>
             <li>Tenderize chicken</li>
