--- a/recipes/ram-don.html
+++ b/recipes/ram-don.html
@@ -12,7 +12,7 @@
     <h4 class="topheading">Nice bowl of ram-don</h4>
         <p>Started making this because of Parasite</p>
         <p>super yummy and makes us feel cozy</p>
-    <h4 class="subheading" id="ingredients"><strong>Ingredients</strong></h4>
+    <h4 class="subheading" id="ingredients">Ingredients</h4>
         <ul class="bullets">
           <li>Neoguri ramen</li>
           <li>Sirloin or steak of your choosing</li>
@@ -22,7 +22,7 @@
           <li>Mirin</li>
           <li>Peanut oil</li>
         </ul>
-    <h4 class="subheading" id="ingredients"><strong>Steps</strong></h4>
+    <h4 class="subheading" id="ingredients">Steps</h4>
         <ol class="bullets">
             <li>Get steak to room temp</li>
             <li>Boil water</li>
